--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,19 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header class="header">
+      <div class="header-logo">
+        毎日スクワット
+      </div>
+      <%= link_to logs_path do %>
+        <i class="fa fa-pencil fa-2x"></i>
+      <% end %>
+    </header>
+    </br>
+    <div class="wrapper">
+      <%= yield %>
+    </div>
   </body>
 </html>
+
+
