--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,7 @@
 
 body{
   background: #efefef;
+  width: 100%;
   margin: 0;
 }
 
@@ -38,6 +39,7 @@ a:-webkit-any-link {
   justify-content: space-between;
   align-items: center;
   background: #000055;
+  height: 50px;
   box-shadow: 0 0.5px 3px 2px rgba(0,0,0,0.5);
 }
 
