--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,17 +29,18 @@ a:-webkit-any-link {
 }
 
 .fa{
-  margin-right: 20px;
+  margin-left: 20px;
   color: #fff;
   font-size: 140px;
 }
 
 .header{
   display: flex;
-  justify-content: space-between;
+  /*justify-content: space-between;*/
   align-items: center;
   background: #000055;
   height: 50px;
+  width: 100%;
   box-shadow: 0 0.5px 3px 2px rgba(0,0,0,0.5);
 }
 
